# orbital-sci-mcp

./: .env.example  README.md  README_ja.md  pyproject.toml  pytest.ini
dev/: ai4science-mcp-design.md  ai4science-mcp-requirements.md  dig-protein-ligand-guide.md  graphormer-dig-operations-guide.md  graphormer-fairseq-evaluate-guide.md
dev/examples/: README.md  bioemu.json  dig.json  discovery.json  graphormer.json  mace.json  mattergen.json  mattersim.json
references/: MCP_AI4Science.md  ms-ai4science-tools-2.md  ms-ai4science-tools-final.md  ms-ai4science-tools.md
src/orbital_sci_mcp/: __init__.py  cli.py  config.py  errors.py  execution.py  logging_config.py  models.py  registry.py  server.py
src/orbital_sci_mcp/adapters/: __init__.py  base.py  bioemu.py  dig.py  graphormer.py  mace.py  mattergen.py  mattersim.py  utils.py
src/orbital_sci_mcp/schemas/: __init__.py  common.py  materials.py  molecules.py  proteins.py
src/orbital_sci_mcp/tools/: __init__.py  discovery.py  execution_tools.py
tests/: test_bioemu_adapter.py  test_cli.py  test_dig_adapter.py  test_dig_integration.py  test_execution.py  test_graphormer_adapter.py  test_graphormer_integration.py  test_mace_adapter.py  test_mattergen_adapter.py  test_mattersim_adapter.py  test_registry.py  test_server.py  test_smoke.py
